--- a/Rush 1.0/Base.lproj/Main.storyboard
+++ b/Rush 1.0/Base.lproj/Main.storyboard
@@ -209,6 +209,27 @@
             </objects>
             <point key="canvasLocation" x="916" y="811.84407796101959"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="0QM-jW-Ah1">
+            <objects>
+                <viewController id="LsM-MW-Hx6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nJ5-zh-7Po">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="simple" translatesAutoresizingMaskIntoConstraints="NO" id="dKe-F1-wZX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ddz-xk-7Hl"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tm4-FB-YGN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1621.5999999999999" y="827.13643178410803"/>
+        </scene>
         <!--Special Request-->
         <scene sceneID="kOq-r9-3kM">
             <objects>
@@ -471,7 +492,6 @@
         <!--Room 1-->
         <scene sceneID="D5i-h5-89y">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hWc-wV-8zY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Room 1" id="kiE-Wp-7sw" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jmv-RG-BBY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -720,6 +740,7 @@
                         <viewLayoutGuide key="safeArea" id="nCP-xv-RFq"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hWc-wV-8zY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1636" y="2216.9415292353824"/>
         </scene>
@@ -743,6 +764,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="O1P-K3-7Ls"/>
                     </view>
+                    <connections>
+                        <segue destination="LsM-MW-Hx6" kind="show" id="YP5-oD-zVu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gDA-7h-yFs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -776,7 +800,6 @@
         <!--Room 3-->
         <scene sceneID="qHT-Sr-cwf">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BdX-fB-K8h" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Room 3" id="2Ho-FJ-ngy" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="evQ-Qq-WQb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -1025,13 +1048,13 @@
                         <viewLayoutGuide key="safeArea" id="mvL-eF-xVm"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BdX-fB-K8h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1636" y="3543"/>
         </scene>
         <!--Room 2-->
         <scene sceneID="pa7-Zf-VqB">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lDl-FK-cAA" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Room 2" id="uiv-Ll-Ufl" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pE8-Jk-Xas">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -1280,6 +1303,7 @@
                         <viewLayoutGuide key="safeArea" id="Bs4-xv-ggZ"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lDl-FK-cAA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1636" y="2889"/>
         </scene>
