--- a/Rush 1.0/Base.lproj/Main.storyboard
+++ b/Rush 1.0/Base.lproj/Main.storyboard
@@ -756,10 +756,37 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uLs-GD-goO" customClass="RoundedButton" customModule="Rush_1_0" customModuleProvider="target">
+                                <rect key="frame" x="72" y="318" width="231" height="31"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="Clinical">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rush logo" translatesAutoresizingMaskIntoConstraints="NO" id="6LJ-Ry-kGp">
                                 <rect key="frame" x="7" y="73" width="59" height="1"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i6h-lh-CCa" customClass="RoundedButton" customModule="Rush_1_0" customModuleProvider="target">
+                                <rect key="frame" x="72" y="171" width="231" height="31"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="Shelters">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wI4-rK-q1u" customClass="RoundedButton" customModule="Rush_1_0" customModuleProvider="target">
+                                <rect key="frame" x="72" y="458" width="231" height="31"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="HelpMe">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="O1P-K3-7Ls"/>
@@ -1318,7 +1345,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="L50-Mg-MKd"/>
         <segue reference="EVa-A3-hcr"/>
-        <segue reference="7bn-DY-Qxy"/>
+        <segue reference="u6J-RU-UtD"/>
         <segue reference="F6q-9E-Gr0"/>
         <segue reference="9S1-FU-2AI"/>
     </inferredMetricsTieBreakers>
