--- a/Rush 1.0/Base.lproj/Main.storyboard
+++ b/Rush 1.0/Base.lproj/Main.storyboard
@@ -210,6 +210,27 @@
             <point key="canvasLocation" x="916" y="811.84407796101959"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="xkK-rN-2oy">
+            <objects>
+                <viewController id="Fej-md-o6A" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="THS-QW-jsJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="simple" translatesAutoresizingMaskIntoConstraints="NO" id="xkJ-xb-TMo">
+                                <rect key="frame" x="119" y="269" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="LzB-tC-kwo"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3YA-bs-Rv6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1638" y="789"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="fcg-UP-e7B">
             <objects>
                 <viewController id="Vsu-eq-eMX" sceneMemberID="viewController">
@@ -767,6 +788,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="O1P-K3-7Ls"/>
                     </view>
+                    <connections>
+                        <segue destination="Fej-md-o6A" kind="show" id="6CW-sM-w15"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gDA-7h-yFs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
